--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -10,7 +10,7 @@
 
 .modal {
   position: fixed;
-  top: 20vh;
+  top: 15vh;
   left: 5%;
   width: 90%;
   background-color: white;
@@ -19,6 +19,8 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
+  max-height: calc(100vh - 210px);
+  overflow-y: auto;
 }
 
 @media (min-width: 768px) {
